--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body {
   color: $color-primary;
   font-family: $font-primary;
   line-height: 1.5;
-  padding: 6rem;
+  padding: 10rem;
 }
 
 //NAVBAR
@@ -76,11 +76,11 @@ body {
   padding: 12rem 0;
 }
 .section-projects {
-  padding: 2rem 0;
-}
-.section-contact {
   padding: 12rem 0;
 }
+// .section-contact {
+//   padding: 6rem 0;
+// }
 
 //FLEX GRID
 .row {
@@ -93,21 +93,57 @@ body {
 .column {
   flex: 1;
   &:not(:last-child) {
-    margin-right: 10rem;
+    margin-right: 9rem;
   }
 }
 
+//CONTACT BLOCK
+.contact-block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 191, 242, 0.7),
+    rgba(121, 190, 254, 0.7)
+  );
+  padding: 2rem;
+  border-radius: 2px;
+  &__link {
+    text-decoration: none;
+    color: $color-primary;
+  }
+  &--envelope {
+    font-size: 3rem;
+    transition: all 0.4s;
+    margin: 1rem 0;
+    &:link,
+    &:visited {
+      display: inline-block;
+      text-decoration: none;
+      color: $color-primary;
+    }
+    &:hover,
+    &:active {
+      color: $color-tertiary;
+    }
+  }
+}
+
+//PROJECT CARDS
 .card {
   width: 100%;
   position: relative;
   display: flex;
   justify-content: center;
+  border-radius: 2px;
   &__img {
     width: 100%;
     height: auto;
-    border: 2rem solid white;
+    border: 1.7rem solid $white;
     border-radius: 2px;
-    // box-shadow: 1px 1px 7px lighten($color-secondary, 50);
   }
   &__overlay {
     display: flex;
@@ -153,13 +189,14 @@ body {
 }
 
 //UTILITIES
+
 .margin-top-md {
   margin-top: 10rem;
 }
 
 //FOOTER
 .footer {
-  padding-top: 6rem;
+  padding-top: 12rem;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
