--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
-$white: #f8f8ff;
+$white: #fff;
+$bg: #f8f8ff;
 $color-primary: #02182b;
 $color-secondary: rgb(65, 64, 64);
 $color-tertiary: #44bac4;
@@ -19,7 +20,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: $white;
+  background-color: $bg;
   color: $color-primary;
   font-family: $font-primary;
   line-height: 1.5;
@@ -78,9 +79,6 @@ body {
 .section-projects {
   padding: 12rem 0;
 }
-// .section-contact {
-//   padding: 6rem 0;
-// }
 
 //FLEX GRID
 .row {
@@ -107,12 +105,10 @@ body {
   background-image: linear-gradient(
     to right,
     rgba(226, 191, 245, 0.7),
-    rgba(171, 190, 250, 0.7)
+    rgba(189, 188, 248, 0.7)
   );
-  //   background-color: darken($white, 5);
-  //   background-color: rgba(211, 191, 247, 0.5);
   padding: 2rem;
-  border-radius: 2px;
+  border-radius: 12px;
   &__link {
     text-decoration: none;
     color: $color-primary;
@@ -120,7 +116,7 @@ body {
   &--envelope {
     font-size: 3rem;
     transition: all 0.4s;
-    margin: 1rem 0;
+    margin-top: 1rem;
     &:link,
     &:visited {
       display: inline-block;
@@ -139,72 +135,56 @@ body {
   width: 100%;
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  //   align-items: flex-end;
-  border-radius: 2px;
+  border-radius: 4px;
   &__img {
     width: 100%;
     height: auto;
-    border: 1.7rem solid darken($white, 2);
-    border-radius: 2px;
+    border: 1.2rem solid $white;
+    border-radius: 4px 4px 0 0;
+    opacity: 0.6;
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      opacity: 1;
+    }
   }
-  //   &__title {
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: flex-end;
-  //     align-items: flex-end;
-  //     border-radius: 2px;
-  //     position: absolute;
-  //     background-color: darken($white, 2);
-  //     padding: 2rem;
-  //     opacity: 1;
-  //     bottom: 0;
-  //     height: 9rem;
-  //     width: 100%;
-  //   }
-  &__overlay {
+  &__details {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    border-radius: 2px;
-    position: absolute;
-    background-color: darken($white, 2);
+    border-radius: 0 0 4px 4px;
+    background-color: $white;
     padding: 2rem;
-    opacity: 1;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    transition: all 0.4s;
-    &:hover {
-      //   opacity: 0.95;
-    }
   }
 }
 
 .btn-container {
-  margin-top: 1rem;
+  margin: 1rem 0;
   display: flex;
   justify-content: flex-end;
 }
 .btn {
   font-size: 1.2rem;
   padding: 1rem 1.7rem;
-  background-color: $color-tertiary;
-  border-radius: 5px;
+  background-color: darken($bg, 2);
+  border: 1px solid $color-secondary;
+  border-radius: 25px;
   &:link,
   &:visited {
-    font-weight: 400;
+    font-weight: 500;
     display: inline-block;
     text-decoration: none;
-    color: $color-secondary;
-    box-shadow: 3px 3px 3px lighten($color-secondary, 60);
-    transition: all 0.3s;
+    color: darken($color-tertiary, 23);
+    box-shadow: 3px 3px 3px lighten($color-secondary, 55);
+    transition: all 0.3s ease-in;
   }
   &:hover,
   &:active {
-    color: $color-primary;
-    box-shadow: 3px 3px 3px lighten($color-secondary, 65);
+    background-color: darken($bg, 0);
+    color: darken($color-tertiary, 15);
+    box-shadow: 3px 3px 3px lighten($color-secondary, 63);
   }
   &:not(:first-child) {
     margin-left: 2rem;
@@ -217,8 +197,9 @@ body {
   font-size: 2.5rem;
 }
 .heading-secondary {
-  font-weight: 700;
-  font-size: 2.3rem;
+  font-weight: 600;
+  font-size: calc(100% + 8px);
+  line-height: 1;
 }
 .paragraph {
   font-size: $default-font-size;
@@ -226,12 +207,25 @@ body {
 }
 .card-subheading {
   font-size: $default-font-size;
-  font-weight: 500;
+  font-weight: 400;
 }
 .card-text {
-  font-size: $default-font-size;
+  font-size: calc(140% - 1px);
   color: $color-secondary;
   text-align: right;
+  &__skills {
+    font-size: calc(130% - 1px);
+    color: lighten($color-secondary, 20);
+  }
+}
+
+hr {
+  margin-top: 5px;
+  height: 1px;
+  color: lighten($color-secondary, 50);
+  background-color: lighten($color-secondary, 50);
+  border: 0;
+  width: 80%;
 }
 
 //UTILITIES
