--- a/style.scss
+++ b/style.scss
@@ -102,7 +102,6 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-
   background-image: linear-gradient(
     to right,
     rgba(226, 191, 245, 0.7),
@@ -140,11 +139,10 @@ body {
   flex-direction: column;
   justify-content: center;
   border-radius: 4px;
+  border: 1.2rem solid $white;
   &__img {
     width: 100%;
     height: auto;
-    border: 1.2rem solid $white;
-    border-radius: 4px 4px 0 0;
     opacity: 0.6;
     transition: all 0.4s ease-in-out;
     &:hover {
@@ -156,14 +154,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    border-radius: 0 0 4px 4px;
     background-color: $white;
     padding: 2rem;
   }
 }
 
 .btn-container {
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
   display: flex;
   justify-content: flex-end;
 }
