--- a/style.scss
+++ b/style.scss
@@ -2,9 +2,53 @@ $white: #fff;
 $bg: #f8f8ff;
 $color-primary: #02182b;
 $color-secondary: rgb(65, 64, 64);
-$color-tertiary: #44bac4;
+$color-tertiary: rgb(134, 133, 133);
+$color-accent: #44bac4;
 $font-primary: 'Montserrat', sans-serif;
 $default-font-size: 1.5rem;
+$small-font-size: 1.3rem;
+
+//MEDIA QUERIES
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where our normal styles apply
+1800px + :      Big desktop
+
+$breakpoint arguement choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media only screen and (max-width: 37.5em) {
+      @content;
+    } //600px
+  }
+  @if $breakpoint == tab-port {
+    @media only screen and (max-width: 56.25em) {
+      @content;
+    } //900px
+  }
+  @if $breakpoint == tab-collapse {
+    @media only screen and (max-width: 68.75em) {
+      @content;
+    } //1100px
+  }
+  @if $breakpoint == tab-land {
+    @media only screen and (max-width: 75em) {
+      @content;
+    } //1200px
+  }
+  @if $breakpoint == big-desktop {
+    @media only screen and (min-width: 112.5em) {
+      @content;
+    } //1800
+  }
+}
 
 *,
 *::after,
@@ -16,6 +60,20 @@ $default-font-size: 1.5rem;
 
 html {
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    // width < 1200?
+    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
+
+  @include respond(tab-port) {
+    // width < 900?
+    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12, 12/16
+  }
 }
 
 body {
@@ -25,6 +83,15 @@ body {
   font-family: $font-primary;
   line-height: 1.5;
   padding: 10rem;
+  @include respond(tab-land) {
+    padding: 8rem;
+  }
+  @include respond(tab-port) {
+    padding: 6rem;
+  }
+  @include respond(phone) {
+    padding: 3rem;
+  }
 }
 
 //NAVBAR
@@ -32,6 +99,10 @@ body {
   display: flex;
   justify-content: space-between;
   font-size: $default-font-size;
+  @include respond(phone) {
+    flex-direction: column;
+    align-items: flex-end;
+  }
   &__logo {
     width: 5rem;
     border-radius: 50%;
@@ -40,6 +111,9 @@ body {
     display: flex;
     flex-direction: row;
     list-style: none;
+    @include respond(phone) {
+      padding-top: 1rem;
+    }
   }
   &__item {
     &:not(last-child) {
@@ -56,7 +130,7 @@ body {
     }
     &:hover,
     &:active {
-      color: $color-tertiary;
+      color: $color-accent;
     }
     &--envelope {
       font-size: 2rem;
@@ -71,6 +145,7 @@ body {
   justify-content: flex-end;
   align-items: flex-end;
   flex-direction: column;
+  text-align: right;
 }
 
 .section-about {
@@ -80,18 +155,28 @@ body {
   padding: 12rem 0;
 }
 
-//FLEX GRID
+//ABOUT SECTION FLEX GRID
 .row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
+  @include respond(tab-collapse) {
+    flex-direction: column;
+  }
 }
 .column {
   flex: 1;
   &:not(:last-child) {
     margin-right: 9rem;
+  }
+  @include respond(tab-collapse) {
+    padding: 1.5rem 0;
+    text-align: right;
+    &:not(:last-child) {
+      margin-right: 0;
+    }
   }
 }
 
@@ -126,24 +211,38 @@ body {
     }
     &:hover,
     &:active {
-      color: $color-tertiary;
+      color: $color-accent;
     }
   }
 }
 
-//PROJECT CARDS
+//CARDS FLEX GRID
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cards-block {
+  display: flex;
+  padding: 2rem;
+  @media (min-width: 40rem) {
+    width: 50%;
+  }
+  @media (min-width: 56rem) {
+    width: 33.3333%;
+  }
+}
+
 .card {
-  width: 100%;
-  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding: 3rem;
+  background-color: $white;
   border-radius: 4px;
-  border: 1.2rem solid $white;
   &__img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
-    opacity: 0.6;
+    opacity: 0.7;
     transition: all 0.4s ease-in-out;
     &:hover {
       opacity: 1;
@@ -151,42 +250,61 @@ body {
   }
   &__details {
     display: flex;
+    flex: 1 1 auto;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-end;
-    background-color: $white;
-    padding: 2rem;
+    padding: 2rem 0;
+    text-align: right;
+  }
+  &__title {
+    color: $color-secondary;
+    font-size: $default-font-size;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+  &__subtitle {
+    font-size: $default-font-size;
+    font-weight: 500;
+  }
+  &__lang-text {
+    color: lighten($color-secondary, 30);
+  }
+  &__text {
+    flex: 1 1 auto;
+    font-size: $small-font-size;
+    margin-top: 1.25rem;
   }
 }
 
+//BUTTONS
 .btn-container {
-  margin: 1rem 0 0 0;
+  width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 .btn {
-  font-size: 1.2rem;
-  padding: 1rem 1.7rem;
-  background-color: darken($bg, 2);
-  border: 1px solid $color-secondary;
-  border-radius: 20px;
   &:link,
   &:visited {
-    font-weight: 500;
-    display: inline-block;
-    text-decoration: none;
+    border: 1px solid $color-tertiary;
+    border-radius: 12px;
+    background-color: $bg;
     color: $color-secondary;
+    padding: 1.2rem;
+    width: 48%;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: $small-font-size;
+    text-align: center;
+    text-decoration: none;
     box-shadow: 3px 3px 3px lighten($color-secondary, 55);
-    transition: all 0.3s ease-in;
+    transition: all 0.2s ease-in;
   }
   &:hover,
   &:active {
-    background-color: darken($bg, 0);
+    background-color: lighten($bg, 5);
     color: lighten($color-secondary, 15);
     box-shadow: 3px 3px 3px lighten($color-secondary, 63);
-  }
-  &:not(:first-child) {
-    margin-left: 2rem;
   }
 }
 
@@ -195,31 +313,12 @@ body {
   font-weight: 700;
   font-size: 2.5rem;
 }
-.heading-secondary {
-  font-weight: 600;
-  font-size: calc(100% + 8px);
-  line-height: 1;
-}
 .paragraph {
   font-size: $default-font-size;
   color: $color-secondary;
 }
-.card-subheading {
-  font-size: $default-font-size;
-  font-weight: 400;
-}
-.card-text {
-  font-size: calc(140% - 1px);
-  color: $color-secondary;
-  text-align: right;
-  &__skills {
-    font-size: calc(130% - 1px);
-    color: lighten($color-secondary, 20);
-  }
-}
-
 hr {
-  margin-top: 5px;
+  margin: 5px 0;
   height: 1px;
   color: lighten($color-secondary, 50);
   background-color: lighten($color-secondary, 50);
@@ -228,8 +327,8 @@ hr {
 }
 
 //UTILITIES
-.margin-top-xs {
-  margin-top: 2rem;
+.margin-top-s {
+  margin-top: 4rem;
 }
 .margin-top-md {
   margin-top: 10rem;
