--- a/style.scss
+++ b/style.scss
@@ -10,20 +10,12 @@ $caption-font-size: 1.1rem;
 $small-font-size: 1.3rem;
 
 //MEDIA QUERIES
-/*
-0 - 600px:      Phone
-600 - 900px:    Tablet portrait
-900 - 1200px:   Tablet landscape
-[1200 - 1800] is where our normal styles apply
-1800px + :      Big desktop
-
-$breakpoint arguement choices:
-- phone
-- tab-port
-- tab-land
-- big-desktop
-*/
 @mixin respond($breakpoint) {
+  @if $breakpoint == xsphone {
+    @media only screen and (max-width: 25em) {
+      @content;
+    } //400px
+  }
   @if $breakpoint == phone {
     @media only screen and (max-width: 37.5em) {
       @content;
@@ -35,9 +27,9 @@ $breakpoint arguement choices:
     } //900px
   }
   @if $breakpoint == tab-collapse {
-    @media only screen and (max-width: 68.75em) {
+    @media only screen and (max-width: 65.62em) {
       @content;
-    } //1100px
+    } //1050px
   }
   @if $breakpoint == tab-land {
     @media only screen and (max-width: 75em) {
@@ -63,17 +55,15 @@ html {
   font-size: 62.5%;
 
   @include respond(tab-land) {
-    // width < 1200?
-    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+    font-size: 56.25%;
   }
 
   @include respond(tab-port) {
-    // width < 900?
-    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    font-size: 50%;
   }
 
   @include respond(big-desktop) {
-    font-size: 75%; //1rem = 12, 12/16
+    font-size: 75%;
   }
 }
 
@@ -85,7 +75,7 @@ body {
   line-height: 1.5;
   padding: 10rem;
   @include respond(tab-land) {
-    padding: 8rem;
+    padding: 7rem;
   }
   @include respond(tab-port) {
     padding: 6rem;
@@ -148,7 +138,6 @@ body {
   flex-direction: column;
   text-align: right;
 }
-
 .section-about {
   padding: 12rem 0;
 }
@@ -222,15 +211,22 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-
 .cards-block {
   display: flex;
   padding: 2rem;
-  @media (min-width: 40rem) {
+  width: 33.3333%;
+  @include respond(tab-collapse) {
     width: 50%;
   }
-  @media (min-width: 56rem) {
-    width: 33.3333%;
+  @include respond(tab-port) {
+    padding: 1rem;
+  }
+  @include respond(phone) {
+    width: 100%;
+    padding: 3rem;
+  }
+  @include respond(xsphone) {
+    padding: 1rem;
   }
 }
 
@@ -284,6 +280,10 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  @include respond(xsphone) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .btn {
   &:link,
@@ -301,6 +301,11 @@ body {
     text-decoration: none;
     box-shadow: 3px 3px 3px lighten($color-secondary, 55);
     transition: all 0.2s ease-in;
+    @include respond(xsphone) {
+      width: 100%;
+      border-radius: 8px;
+      margin-top: 2rem;
+    }
   }
   &:hover,
   &:active {
@@ -331,6 +336,9 @@ hr {
 //UTILITIES
 .margin-top-s {
   margin-top: 4rem;
+  @include respond(xsphone) {
+    margin-top: 2rem;
+  }
 }
 .margin-top-md {
   margin-top: 10rem;
