--- a/style.scss
+++ b/style.scss
@@ -324,6 +324,9 @@ body {
   font-size: $default-font-size;
   color: $color-secondary;
 }
+.bold {
+  font-weight: 700;
+}
 hr {
   margin: 5px 0;
   height: 1px;
