added react app project

--- a/style.scss
+++ b/style.scss
@@ -291,8 +291,8 @@ body {
   &:visited {
     border: 1px solid $color-tertiary;
     border-radius: 12px;
-    background-color: $bg;
-    color: $color-secondary;
+    background-color: #cfbef7;
+    color: $color-primary;
     padding: 1.2rem;
     width: 48%;
     text-transform: uppercase;
@@ -300,7 +300,7 @@ body {
     font-size: $small-font-size;
     text-align: center;
     text-decoration: none;
-    box-shadow: 3px 3px 3px lighten($color-secondary, 55);
+    box-shadow: 3px 3px 3px lighten($color-secondary, 65);
     transition: all 0.2s ease-in;
     @include respond(xsphone) {
       width: 100%;
